fix overflow

--- a/assets/loadingPage.css
+++ b/assets/loadingPage.css
@@ -8,6 +8,11 @@
     align-content: center;
 }
 
+
+body {
+    overflow: hidden;
+}
+
 .shell {
     height: 100vh;
     width: 100vw;
